[workspace]
members = [
	".",
	"chekov_macros",
	"event_store",
	"examples/*"
]

[package]
name = "chekov"
version = "0.1.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/freyskeyd/chekov"
documentation = "https://docs.rs/chekov"
description = "CQRS/ES Framework"
edition = "2018"
keywords = []
categories = []
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]

[dependencies]
event_store = { version = "0.1" }
chekov_macros = { version = "0.1", path = "chekov_macros" }
fnv = "1.0.3"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
# Until next minor
sqlx = {version = "0.5", features = ["postgres", "chrono", "time", "uuid", "json", "offline", "runtime-actix-native-tls"]}
async-trait = "0.1"
serde = "1"
serde_json = "1"
actix = "0.12"
futures = "0"
log = {version = "0.4"}

tracing = "0.1"
tracing-futures = { version = "0" }

inventory = "0"
lazy_static = "1.4.0"
typetag = "0.1"
