[workspace]
resolver = "2"
default-members = ["crates/*"]
members = ["crates/*", "examples/*"]

[workspace.dependencies]
uuid = { version = "1.3.0", features = ["serde", "v4"] }
serde = { version = "1.0.117", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "chrono",
    "time",
    "uuid",
    "json",
    "offline",
    "runtime-actix-native-tls",
] }
async-trait = "0.1.51"
serde_json = "1.0.68"
actix = "0.12.0"
futures = "0.3.17"
log = "0.4.14"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.28"
tracing-futures = "0.2.5"
