[package]
name = "chekov_macros"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "*"
quote = "1"
syn = { version = "1", features = ["full"]}
proc-macro2 = "1"
