[package]
name = "chekov_macros"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freyskeyd/chekov"
documentation = "https://docs.rs/chekov"
description = "CQRS/ES Framework macros"
keywords = []
categories = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0"
quote = "1"
syn = { version = "1", features = ["full"]}
proc-macro2 = "1"
