[package]
name = "event_store"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
description = "Crate to deal with every aspect of an eventstore"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
tokio = {version = "1", features = ["full"]}
futures = "0.3"
log = {version = "0.4"}
actix = "0.12"
sqlx = {git = "https://github.com/Freyskeyd/sqlx", features = ["postgres", "chrono", "time", "uuid", "json", "offline", "runtime-actix-native-tls"]}
chrono = "0.4"
actix-interop = { git = "https://github.com/Freyskeyd/actix-interop" }
# actix-interop = "0.2"

tracing = "0.1"
tracing-futures = { version = "*" }

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
verbose = []
