[package]
name = "event_store"
version = "0.1.1"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
description = "Crate to deal with every aspect of an eventstore"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
tokio = {version = "1", features = ["full"]}
futures = "0.3"
log = {version = "0.4"}
actix = "0.12"
sqlx = {version = "0.5", features = ["postgres", "chrono", "time", "uuid", "json", "offline", "runtime-actix-native-tls"]}
chrono = {version = "0.4", features = ["serde"]}

tracing = "0.1"
tracing-futures = { version = "0" }

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
verbose = []
