[package]
name = "event_store"
version = "0.1.1"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
description = "Crate to deal with every aspect of an eventstore"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = "1.0.130"
serde_json = "1.0.68"
async-trait = "0.1.51"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"
log = "0.4.14"
actix = "0.12.0"
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "time", "uuid", "json", "offline", "runtime-actix-native-tls"] }
chrono = { version = "0.4.19", features = ["serde"] }

tracing = "0.1.28"
tracing-futures = "0.2.5"
async-stream = "0.3"

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
verbose = []
