[package]
name = "chekov-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.7", default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }
prost = "0.10"
prost-types = "0.10"
tracing-core = "0.1.17"
actix = "0.12.0"

tokio = {version = "*", features = [ "full"]}

tokio-stream = "*"
event_store-core = { version = "0.1.0", path = "../event_store-core" }

[build-dependencies]
tonic-build = { version = "0.7", default-features = false, features = [
    "prost", "transport"
] }
