[package]
name = "chekov"
version = "0.1.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/freyskeyd/chekov"
documentation = "https://docs.rs/chekov"
description = "CQRS/ES Framework"
edition = "2018"
keywords = []
categories = []
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]

[dependencies]
event_store = { version = "0.1", path = "../event_store" }
chekov-macros = { version = "0.1", path = "../chekov-macros" }
fnv = "1.0.7"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
# Until next minor
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "time", "uuid", "json", "offline", "runtime-actix-native-tls"] }
async-trait = "0.1.51"
serde = "1.0.130"
serde_json = "1.0.68"
actix = "0.12.0"
futures = "0.3.17"
log = "0.4.14"
tokio = { version = "1.12.0", features = ["full"] }

tracing = "0.1.28"
tracing-futures = "0.2.5"

inventory = "0.1.10"
lazy_static = "1.4.0"
typetag = "0.1.7"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.0.0"


