[package]
name = "chekov"
version = "0.1.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/freyskeyd/chekov"
documentation = "https://docs.rs/chekov"
description = "CQRS/ES Framework"
edition = "2018"
keywords = []
categories = []
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]

[dependencies]
uuid.workspace = true
serde.workspace = true
sqlx.workspace = true
async-trait.workspace = true
serde_json.workspace = true
actix.workspace = true
futures.workspace = true
log.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true

event_store = { version = "0.1", path = "../event_store" }
chekov-macros = { version = "0.1", path = "../chekov-macros" }
fnv = "1.0.7"
chrono = "0.4.19"
# Until next minor
inventory = "0.1.10"
lazy_static = "1.4.0"
typetag = "0.1.7"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
test-span = "0.1.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }

