[package]
name = "event_store-backend-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "time", "uuid", "json", "offline", "runtime-actix-native-tls"] }
event_store-core = { version = "0.1.0", path = "../event_store-core" }
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.12.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde_json = "1.0.68"
log = "0.4.14"
tracing = "0.1.28"
tracing-futures = "0.2.5"
futures = "0.3.17"
thiserror = "1.0"
async-stream = "0.3"

[dev-dependencies]
pretty_assertions = "1.0.0"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
test-span = "0.1.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }


