[package]
name = "event_store-backend-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlx.workspace = true
futures.workspace = true

event_store-core = { version = "0.1.0", path = "../event_store-core" }
thiserror = "1.0"
async-stream = "0.3"

[dev-dependencies]
pretty_assertions = "1.0.0"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
test-span = "0.1.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }


