[package]
name = "event_store-core"
version = "0.1.0"
edition = "2021"
description = "Core struct and trait used to build event_store runtime/storage"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.17"
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.68"
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "time", "uuid", "json", "offline", "runtime-actix-native-tls"] }
tokio = { version = "1.12.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
