[package]
name = "event_store-core"
version = "0.1.0"
edition = "2021"
description = "Core struct and trait used to build event_store runtime/storage"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { workspace = true, optional = true }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0"

[features]
default = ["actix-rt"]
verbose = []

actix-rt = ["actix"]


