[package]
name = "event_store-eventbus-inmemory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid.workspace = true
serde.workspace = true
actix.workspace = true
futures.workspace = true
tokio.workspace = true

async-stream = "0.3"

event_store-core = { version = "0.1.0", path = "../event_store-core" }

[dev-dependencies]
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
test-span = "0.1.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }

