[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid.workspace = true
futures.workspace = true
sqlx.workspace = true
tokio.workspace = true

event_store = { version = "0.1", path = "../event_store" }
tui = "0.18"
crossterm = "0.23"
