[package]
name = "event_store-backend-inmemory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

event_store-core = { version = "0.1.0", path = "../event_store-core" }
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.12.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde_json = "1.0.68"
log = "0.4.14"
tracing = "0.1.28"
tracing-futures = "0.2.5"
futures = "0.3.17"
