[package]
name = "event_store"
version = "0.1.1"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
description = "Crate to deal with every aspect of an eventstore"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = "1.0.130"
serde_json = "1.0.68"
async-trait = "0.1.51"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"
log = "0.4.14"
actix = "0.12.0"
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "time", "uuid", "json", "offline", "runtime-actix-native-tls"] }
chrono = { version = "0.4.19", features = ["serde"] }

tracing = "0.1.28"
tracing-futures = "0.2.5"
async-stream = "0.3"

event_store-core = { version = "0.1.0", path = "../event_store-core" }

event_store-backend-inmemory = { version = "0.1.0", path = "../event_store-backend-inmemory", optional = true }
event_store-backend-postgres = { version = "0.1.0", path = "../event_store-backend-postgres", optional = true }

event_store-eventbus-postgres = { version = "0.1.0", path = "../event_store-eventbus-postgres", optional = true }
event_store-eventbus-inmemory = { version = "0.1.0", path = "../event_store-eventbus-inmemory", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
test-span = "0.1.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }

[features]
default = ["postgres", "inmemory"]
verbose = []

postgres = ["postgres_backend", "postgres_event_bus"]
postgres_backend = ["event_store-backend-postgres"]
postgres_event_bus = ["event_store-eventbus-postgres"]

inmemory = ["inmemory_backend", "inmemory_event_bus"]
inmemory_backend = ["event_store-backend-inmemory"]
inmemory_event_bus = ["event_store-eventbus-inmemory"]
