[package]
name = "bank"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
workspace = "../../"

[dependencies]
chekov = { path = "../../"  }
tokio = {version = "1", features = ["full"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "*"
serde_json = "*"
actix = "0.12"
log = "*"
futures = "*"
actix-web = "4.0.0-beta.8"

sqlx = {git = "https://github.com/Freyskeyd/sqlx", features = ["postgres", "chrono", "time", "uuid", "json", "runtime-actix-native-tls"]}
chrono = "0.4"

tracing = {version ="*", features = []}
tracing-subscriber = "*"
tracing-futures = "*"
tracing-log = "*"

