[package]
name = "bank"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
workspace = "../../"

[dependencies]
chekov = { path = "../../"  }
tokio = { version = "1.12.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = "1.0.130"
serde_json = "1.0.68"
actix = "0.12.0"
log = "0.4.14"
futures = "0.3.17"
actix-web = "4.0.0-beta.9"

sqlx = { version = "0.5.9", features = ["postgres", "chrono", "time", "uuid", "json", "runtime-actix-native-tls"] }
chrono = "0.4.19"

tracing = { version = "0.1.28", features = [] }
tracing-subscriber = "0.2.24"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"

