[package]
name = "bank"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
workspace = "../../"

[dependencies]
actix.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

chekov = { path = "../../crates/chekov"  }
actix-web = "4.0.0-beta.9"
tracing-subscriber = "0.2.24"
