[package]
name = "gift_shop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
sqlx.workspace = true
actix.workspace = true

chekov = { path = "../../crates/chekov"  }
actix-web = "4.0.0-beta.9"
tracing-subscriber = "0.2.24"
