[package]
name = "multiple"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
workspace = "../../"

[dependencies]
async-std = { version = "1.4.0", features = [ "attributes", "unstable" ] }
sqlx = {version = "0.4.1", features = ["postgres", "chrono", "time", "uuid", "json", "offline"]}

chrono = "0.4"
dotenv = "*"
actix = "*"
actix-rt = "1.1"
env_logger = "0.7.1"
log = "*"
futures = "*"

uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web = "3"
chekov = { path = "../../"  }
event_store = { path = "../../event_store", features = ["verbose"] }

serde = "*"
serde_json = "*"
async-trait = "0.1"
lazy_static = "1.4.0"
